@@ -3,6 +3,9 @@ PiCenter Changelog
 
 1.0.00a
 
+Build 100113
+    Fix Create User Page bug.
+
 11/24/2019
 Build 100112
     Add Create User Page.
